dp: 120 MinimumTotal